# prompt-eng

./: .gitignore  README.md  mypy.ini  pyproject.toml
app/: config.py  schemas.py
app/api/: fastapi_tool_server.py
app/api/core/: container.py
app/api/routes/: demo.py
app/approval/: entities.py  models.py  repository.py  router.py
app/db/: connection.py
app/llm/: base.py  mock.py  openai_responses.py
app/observability/: tracing.py
app/prompts/: loader.py
app/prompts/incident_plan/v1/: prompt.md
app/prompts/incident_summary/v1/: prompt.md  schema.json
app/runtime/: __init__.py  approval.py  harness.py  orchestrator.py  renderer.py  repair.py  workflows.py
app/scripts/: live_demo.py
app/security/: policy.py  policy_decision.py  tool_policy.py
app/server/: fastapi_tool_server.py
app/server/core/: container.py
app/server/routes/: __init__.py  demo.py  tools.py
app/tools/: __init__.py  base.py  http_tool.py  registry.py
prompts/notification/v1/: prompt.md  schema.json
src/: __init__.py  config.py  main.py
src/ai/prompts/: loader.py
src/ai/prompts/incident_broadcast/incident_plan/v2/: prompt.md  schema.json
src/api/: __init__.py  container.py  schemas.py
src/api/core/: container.py
src/api/routes/: __init__.py  agents.py  approvals.py  artifacts.py  cases.py  demo.py  models.py  runs.py  steps.py  tools.py  workflows.py
src/app/: main.py
src/approval/: router.py
src/core/: errors.py  types.py
src/core/observability/: __init__.py
src/db/: connection.py
src/domain/approval/: __init__.py  approval_gate.py  default_approval_gate.py  entities.py  noop_approval_gate.py  repository.py
src/domain/plans/: __init__.py  llm_plan_generator.py  plan_generator.py
src/domain/policies/: __init__.py  default_policy_provider.py  fake_policy_provider.py  policy.py  policy_decision.py  policy_provider.py
src/domain/prompt_store/: __init__.py  file_system_prompt_store.py  in_memory_prompt_store.py  prompt_store.py
src/domain/readiness/: __init__.py  entities.py  evaluate_readiness.py
src/domain/summarizer/: __init__.py  llm_workflow_summarizer.py
src/infrastructure/llm/: __init__.py  fake_llm_client.py  openai_responses.py
src/llm/: __init__.py  mock.py  openai_responses.py
src/observability/: __init__.py
src/runtime/: approval.py  harness.py  llm_workflow_summarizer.py  orchestrator.py  plan_executor.py  prompt_utils.py  readiness.py  repair.py  utils.py  workflow_summarizer.py  workflows.py
src/scripts/: live_demo.py
src/security/: __init__.py  policy.py  policy_decision.py
src/tools/: base.py  contracts.py  http_tool.py  registry.py
tests/: test_dag_execution.py  test_harness_end_to_end.py  test_llm_mock.py  test_llm_openai_responses.py  test_orchestrator_with_mock.py  test_prompt_loading.py  test_prompt_rendering.py  test_repair_loop.py  test_schema_validation.py  test_security_policy.py  test_tool_execution.py
tests/fixtures/: fake_plan_generator.py  mock_approval_gate.py  mock_approval_repo.py  mock_llm_client.py  mock_plan_executor.py  mock_policy_provider.py  mock_prompt_renderer.py  mock_prompt_store.py  mock_summarizer.py  tool_service_stub.py
(+1 files in other folders)
