[project]
name = "prompt-eng"
version = "0.1.0"
description = "A prompt engineering tutorial project. This is as execution harness."
authors = [
    {name = "Walid Newaz",email = "mdwalid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic[email]>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "uvicorn>=0.27",
    "email-validator>=2.3.0,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "DTZ"]
ignore = ["D203", "D212"]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
known-first-party = ["app"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
pythonpath = ["."]
