[project]
name = "prompt-eng"
version = "0.1.0"
description = "A prompt engineering tutorial project. This is as execution harness."
authors = [
    {name = "Walid Newaz",email = "mdwalid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic[email]>=2.12.5,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "uvicorn>=0.27",
    "email-validator>=2.3.0,<3.0.0",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.17.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "black>=24.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "SIM", "DTZ"]
ignore = ["D203", "D212"]
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.isort]
known-first-party = ["app"]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-anyio = "^0.0.0"
pytest-asyncio = "^1.3.0"
coverage = "^7.13.1"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -s -v"
asyncio_mode = "auto"

[tool.coverage.run]
# Command to run tests: uses pytest
command_line = "-m pytest"
# Specify source files to measure
source = ["src"]
branch = true # Optional: enable branch coverage

[tool.coverage.report]
# Include only specific files in the report
#include = ["src/*.py"]
show_missing = true # Show lines that are missing coverage